--- a/index.html
+++ b/index.html
@@ -40,83 +40,24 @@
 
     <div class="container-fluid">
         <div class="row mt-3">
-            <div class="col-6 border">
+            <div class="col-3 border">
                 <!-- Challenge-1  -->
-                 <div class="container text-center">
-                    
+                 <div class="container text-center py-3">  
                     <h3>Data Types</h3>
-                    <h5>Convert the data as following:</h5>
+                    <h5>Convert the data:</h5>
+                    <a href="dataTypes.html" class="btn btn-secondary">Go to challenge</a>
                  </div>
-                 <div class="container">
-                    <div class="row">
-                        <!--INTEGER-->
-                        <div class="col-6">
-                            <div class="input-group mb-3 col-3">
-                                <span class="input-group-text" id="basic-addon1">Data to Integer </span>
-                                <input id="dataToBeInteger" type="text" class="form-control" placeholder="Please enter the data" aria-label="Username" aria-describedby="basic-addon1">
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="row">
-                                <div class="col-6">
-                                    <button type="button" class="btn btn-secondary" onclick="convertDataToInteger()">Convert</button>
-                                </div>
-                                <div class="col-6">
-                                    <h3 id="resul1">...</h3>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <!--FLOAT-->
-                        <div class="col-6">
-                            <div class="input-group mb-3 col-3">
-                                <span class="input-group-text" id="basic-addon1">Data to Float  </span>
-                                <input type="text" class="form-control" placeholder="Please enter the data" aria-label="Username" aria-describedby="basic-addon1">
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="row">
-                                <div class="col-6">
-                                    <button type="button" class="btn btn-secondary">Convert</button>
-                                </div>
-                                <div class="col-6">
-                                    <h3>...</h3>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <!--STRING-->
-                        <div class="col-6">
-                            <div class="input-group mb-3 col-3">
-                                <span class="input-group-text" id="basic-addon1">Data to String </span>
-                                <input type="text" class="form-control" placeholder="Please enter the data" aria-label="Username" aria-describedby="basic-addon1">
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="row">
-                                <div class="col-6">
-                                    <button type="button" class="btn btn-secondary">Convert</button>
-                                </div>
-                                <div class="col-6">
-                                    <h3>...</h3>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                 </div>
-
             </div>
-            <div class="col-6">
-                <!-- Challenge-2  -->
+            <div class="col-3 ">  
+                <!-- Javascript Dates  -->
+                <div class="container text-center border py-3">  
+                    <h3>Javascript Dates</h3>
+                    <h5>Find and return the day name for that date:</h5>
+                    <a href="javascriptDates.html" class="btn btn-secondary">Go to challenge</a>
+                </div>
             </div>
+
         </div>
     </div>
   </body>
-  <script src="dataTypes.js"></script>
 </html>
