REvised data types, added html events

--- a/index.html
+++ b/index.html
@@ -38,24 +38,52 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row mt-3">
             <div class="col-3 border">
-                <!-- Challenge-1  -->
+                <!-- Data Types  -->
                  <div class="container text-center py-3">  
                     <h3>Data Types</h3>
-                    <h5>Convert the data:</h5>
-                    <a href="dataTypes.html" class="btn btn-secondary">Go to challenge</a>
+                    <h6>Convert the data:</h6>
+                    <a href="dataTypes.html" class="btn btn-secondary">Go</a>
                  </div>
             </div>
             <div class="col-3 ">  
-                <!-- Javascript Dates  -->
-                <div class="container text-center border py-3">  
+              <!-- Javascript Dates  -->
+              <div class="container text-center border py-3">  
                     <h3>Javascript Dates</h3>
-                    <h5>Find and return the day name for that date:</h5>
-                    <a href="javascriptDates.html" class="btn btn-secondary">Go to challenge</a>
-                </div>
+                    <h6>Find and return the day name for that date:</h6>
+                    <a href="javascriptDates.html" class="btn btn-secondary">Go</a>
+              </div>
             </div>
+            <div class="col-3 ">  
+              <!-- Javascript Document Object  -->
+              <div class="container text-center border py-3">  
+                  <h3>Javascript Document Object</h3>
+                  <h6>Change the HTML object:</h6>
+                  <a href="javascriptDocumentObject.html" class="btn btn-secondary">Go</a>
+              </div>
+          </div>
+          <div class="col-3 border">
+            <!--Javascript with HTML Events-->
+             <div class="container text-center py-3">  
+                <h3>Javascript with HTML Events</h3>
+                <h6>Play with HTML Events</h6>
+                <a href="htmlEvents.html" class="btn btn-secondary">Go</a>
+             </div>
+        </div>
+
+
+
+<!--Javascript Objects-->
+<!--Javascript String Functions-->
+<!--Reverse the String-->
+<!--Get Second Largest Number-->
+<!--The number is Positive-->
+<!--Class Usage with Inheritance-->
+<!--Template Literals Usage-->
+<!--Arrow Function Usage-->
+<!--Regex Examples-->
 
         </div>
     </div>
