--- a/dataTypes.html
+++ b/dataTypes.html
@@ -56,6 +56,7 @@
                 >Data to Float
               </span>
               <input
+                id="dataToBeFloat"
                 type="text"
                 class="form-control"
                 placeholder="Please enter the data"
@@ -67,10 +68,10 @@
           <div class="col-6">
             <div class="row">
               <div class="col-6">
-                <button type="button" class="btn btn-secondary">Convert</button>
+                <button type="button" class="btn btn-secondary" onclick="convertDataToFloat()">Convert</button>
               </div>
               <div class="col-6">
-                <h3>...</h3>
+                <h3 id="result2">...</h3>
               </div>
             </div>
           </div>
@@ -82,6 +83,7 @@
                 >Data to String
               </span>
               <input
+                id="dataToBeString"
                 type="text"
                 class="form-control"
                 placeholder="Please enter the data"
@@ -93,10 +95,10 @@
           <div class="col-6">
             <div class="row">
               <div class="col-6">
-                <button type="button" class="btn btn-secondary">Convert</button>
+                <button type="button" class="btn btn-secondary" onclick="convertDataIntoAString()">Convert</button>
               </div>
               <div class="col-6">
-                <h3>...</h3>
+                <h3 id="result3">...</h3>
               </div>
             </div>
           </div>
@@ -104,6 +106,6 @@
       </div>
     </div>
 
-    <script src="date.js"></script>
+    <script src="dataTypes.js"></script>
   </body>
 </html>
