Added javascript object usage example

--- a/index.html
+++ b/index.html
@@ -19,73 +19,91 @@
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-journal-code" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M8.646 5.646a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L10.293 8 8.646 6.354a.5.5 0 0 1 0-.708m-1.292 0a.5.5 0 0 0-.708 0l-2 2a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708-.708L5.707 8l1.647-1.646a.5.5 0 0 0 0-.708"/>
-                        <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2"/>
-                        <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z"/>
-                      </svg>
-                </div>
-                <div class="col-10">
-                    <h2 class="navbar-brand" href="#">
-                        Javascript Algorithm Challanges
-                      </h2>
-                </div>
-            </div>
-
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              fill="currentColor"
+              class="bi bi-journal-code"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M8.646 5.646a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L10.293 8 8.646 6.354a.5.5 0 0 1 0-.708m-1.292 0a.5.5 0 0 0-.708 0l-2 2a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708-.708L5.707 8l1.647-1.646a.5.5 0 0 0 0-.708"
+              />
+              <path
+                d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2"
+              />
+              <path
+                d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z"
+              />
+            </svg>
+          </div>
+          <div class="col-10">
+            <h2 class="navbar-brand" href="#">
+              Javascript Algorithm Challanges
+            </h2>
+          </div>
         </div>
+      </div>
     </nav>
 
     <div class="container">
-        <div class="row mt-3">
-            <div class="col-3 border">
-                <!-- Data Types  -->
-                 <div class="container text-center py-3">  
-                    <h3>Data Types</h3>
-                    <h6>Convert the data:</h6>
-                    <a href="dataTypes.html" class="btn btn-secondary">Go</a>
-                 </div>
-            </div>
-            <div class="col-3 ">  
-              <!-- Javascript Dates  -->
-              <div class="container text-center border py-3">  
-                    <h3>Javascript Dates</h3>
-                    <h6>Find and return the day name for that date:</h6>
-                    <a href="javascriptDates.html" class="btn btn-secondary">Go</a>
-              </div>
-            </div>
-            <div class="col-3 ">  
-              <!-- Javascript Document Object  -->
-              <div class="container text-center border py-3">  
-                  <h3>Javascript Document Object</h3>
-                  <h6>Change the HTML object:</h6>
-                  <a href="javascriptDocumentObject.html" class="btn btn-secondary">Go</a>
-              </div>
+      <div class="row my-3">
+        <!-- Data Types  -->
+        <div class="col-3 border">
+          <div class="container text-center py-3">
+            <h3>Data Types</h3>
+            <h6>Convert the data:</h6>
+            <a href="dataTypes.html" class="btn btn-secondary">Go</a>
           </div>
-          <div class="col-3 border">
-            <!--Javascript with HTML Events-->
-             <div class="container text-center py-3">  
-                <h3>Javascript with HTML Events</h3>
-                <h6>Play with HTML Events</h6>
-                <a href="htmlEvents.html" class="btn btn-secondary">Go</a>
-             </div>
         </div>
-
-
-
-<!--Javascript Objects-->
-<!--Javascript String Functions-->
-<!--Reverse the String-->
-<!--Get Second Largest Number-->
-<!--The number is Positive-->
-<!--Class Usage with Inheritance-->
-<!--Template Literals Usage-->
-<!--Arrow Function Usage-->
-<!--Regex Examples-->
-
+        <!-- Javascript Dates  -->
+        <div class="col-3">
+          <div class="container text-center border py-3">
+            <h3>Javascript Dates</h3>
+            <h6>Find and return the day name for that date:</h6>
+            <a href="javascriptDates.html" class="btn btn-secondary">Go</a>
+          </div>
         </div>
+        <!-- Javascript Document Object  -->
+        <div class="col-3">
+          <div class="container text-center border py-3">
+            <h3>Javascript Document Object</h3>
+            <h6>Change the HTML object:</h6>
+            <a href="javascriptDocumentObject.html" class="btn btn-secondary"
+              >Go</a
+            >
+          </div>
+        </div>
+        <!--Javascript with HTML Events-->
+        <div class="col-3 border">
+          <div class="container text-center py-3">
+            <h3>Javascript with HTML Events</h3>
+            <h6>Play with HTML Events</h6>
+            <a href="htmlEvents.html" class="btn btn-secondary">Go</a>
+          </div>
+        </div>
+        <!--Javascript Objects-->
+        <div class="col-3 border">
+          <div class="container text-center py-3">
+            <h3>Javascript Objects</h3>
+            <h6>Create Javascript Objects</h6>
+            <a href="javascriptObjects.html" class="btn btn-secondary">Go</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
+  <!--Javascript String Functions-->
+  <!--Reverse the String-->
+  <!--Get Second Largest Number-->
+  <!--The number is Positive-->
+  <!--Class Usage with Inheritance-->
+  <!--Template Literals Usage-->
+  <!--Arrow Function Usage-->
+  <!--Regex Examples-->
 </html>
